--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-redux": "^8.1.1",
     "expo-font": "~11.1.1"
   },
