--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "expo": "~48.0.18",
     "expo-checkbox": "~2.3.1",
     "expo-font": "~11.1.1",
@@ -29,6 +30,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-woodpicker": "^0.3.17",
     "react-redux": "^8.1.1"
   },
